--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="speed_test">[Speed Test]</string>
     <string name="speed_testText1">Swing Air와 함께 사용자의</string>
     <string name="speed_testText2">반응속도를 테스트 해보세요!!</string>
+    <string name="exitMessage">\"Back\"버튼 을 한번 더 눌러 SwingBeat를 종료</string>
     <string name="confirm">확인</string>
     <string name="cancel">취소</string>
 </resources>
