--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,11 @@
     <string name="click3">3번 버튼 클릭 시 :</string>
     <string name="click4">4번 버튼 클릭 시 :</string>
     <string name="click5">5번 버튼 클릭 시 :</string>
+    <string name="click6">6번 버튼 클릭 시 :</string>
+    <string name="click7">7번 버튼 클릭 시 :</string>
+    <string name="click8">8번 버튼 클릭 시 :</string>
+    <string name="click9">9번 버튼 클릭 시 :</string>
+    <string name="click10">10번 버튼 클릭 시 :</string>
     <string name="saveNQuit">저장하고 나가기</string>
     <string name="sound_track">Sound Track</string>
     <string name="_1">1</string>
@@ -26,4 +31,33 @@
     <string name="_2">2</string>
     <string name="perfect">Perfect!</string>
     <string name="combo">Combo</string>
+    <string name="start_test">테스트 시작</string>
+    <string name="title_test">[색 반응 테스트]</string>
+    <string name="test_description1">이 테스트는 글자의 색을 따르는 것이 아닌 \'텍스트가 지시하는 색상에 맞추어\' 버튼을 누르는 테스트 입니다.</string>
+    <string name="test_description2">예를 들어,</string>
+    <string name="test_description3">빨강</string>
+    <string name="test_description4">이라면 사용자는 적색 버튼을 눌러야 하는 것이죠.</string>
+    <string name="test_description5">문제는 총 25문제로, 각 문제당 4점씩 배분됩니다.</string>
+    <string name="test_description6">속도는 일반적으로 문제당 0.8초 내로 반응됩니다.</string>
+    <string name="test_description7">※ 정답 개수에 따른 등급 배분표</string>
+    <string name="game_over">게임종료</string>
+    <string name="start">START</string>
+    <string name="blue">파랑</string>
+    <string name="red">빨강</string>
+    <string name="green">초록</string>
+    <string name="yellow">노랑</string>
+    <string name="no">No.</string>
+    <string name="_0">0</string>
+    <string name="score">Score</string>
+    <string name="divide25">/25</string>
+    <string name="yeah">Yeah~!</string>
+    <string name="result">[결과]</string>
+    <string name="grade">등급</string>
+    <string name="good">우수</string>
+    <string name="score2">맞은 개수</string>
+    <string name="goBack">처음으로 돌아가기</string>
+    <string name="ms">시간 간격(ms)</string>
+    <string name="manual">Key Map</string>
+    <string name="KeyMap">Key1 : 방향키 위(↑)\nKey2 : 방향키 아래(↓)\nKey3 : 방향키 좌(←)\nKey4 : 방향키 우(→)
+\nKey5 : 엔터(Enter)\n\nExtension Mode (2 Swing Air)\n\nKey6 : 1\nKey7 : 2\nKey8 : 3\nKey9 : 4\nKey10 : 5</string>
 </resources>
