easter 추가, rhythm 여전히 서비스 종료에 문제가 있음2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="result_bad">Bad</string>
     <string name="total_right">총 맞춘 개수</string>
     <string name="game_over_en">Game over!</string>
+    <string name="easter_foot">Created by 솔직헌심정 - TrueMind</string>
 </resources>
