DrumActivity 수정(기능 추가)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,7 @@
     <string name="total_right">총 맞춘 개수</string>
     <string name="game_over_en">Game over!</string>
     <string name="easter_foot">Created by 솔직헌심정 - TrueMind</string>
+    <string name="s">S</string>
+    <string name="r">R</string>
+    <string name="b">B</string>
 </resources>
